Added two permission prompts

--- a/ImageLocationMap/Info.plist
+++ b/ImageLocationMap/Info.plist
@@ -3,7 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app wants use your location to provide best features and user experience.</string>
+	<string>This app uses your location to provide all features while you’re using the app.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs access to your location even when the app isn’t in use to [explain the need for Always access, such as tracking background activity].</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
